Moved solution and src out of folder SpotifyMuter into root of repository.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 version: 1.0.{build}
 before_build:
-- cmd: nuget restore SpotifyMuter\SpotifyMuter.sln
+- cmd: nuget restore SpotifyMuter.sln
 build:
-  project: SpotifyMuter\SpotifyMuter.sln
+  project: SpotifyMuter.sln
   verbosity: minimal
