--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,12 @@
 version: 1.0.{build}
 before_build:
-- cmd: nuget restore SpotifyMuter.sln
+- nuget restore SpotifyMuter.sln
 build:
   project: SpotifyMuter.sln
   verbosity: minimal
+test_script:
+- mkdir TestResults
+- .\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -returntargetcode -register:user -filter:"+[*]* -[Tests*]*" "-target:C:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\MSTest.exe" "-targetargs:/testcontainer:.\src\Tests\Tests.Model\bin\Debug\Tests.Model.dll /testcontainer:.\src\Tests\Tests.SpotifyMuter.Logic\bin\Debug\Tests.SpotifyMuter.Logic.dll" "-output:.\TestResults\coverage.xml"
+- "SET PATH=C:\\Python34;C:\\Python34\\Scripts;%PATH%"
+- pip install codecov
+- codecov -f ".\TestResults\coverage.xml"
