--- a/src/SpotifyWebHelper/SpotifyWebHelper.csproj
+++ b/src/SpotifyWebHelper/SpotifyWebHelper.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exceptions\SetOAuthException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Exceptions\SetCsrfException.cs" />
     <Compile Include="WebHelperHook.cs" />
