Added more tests for SpotifyCsrfRetriever and for SpotifyOAuthRetriever
* More tests for SpotifyCsrfRetrieverTest
* More tests for SpotifyOAuthRetriever

--- a/src/Tests/Tests.SpotifyWebHelper/Tests.SpotifyWebHelper.csproj
+++ b/src/Tests/Tests.SpotifyWebHelper/Tests.SpotifyWebHelper.csproj
@@ -58,6 +58,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="MockIJsonPageLoaderExtensions.cs" />
     <Compile Include="SpotifyOAuthRetrieverTest.cs" />
     <Compile Include="SpotifyCsrfRetrieverTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
