--- a/src/Model/packages.config
+++ b/src/Model/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Anotar.NLog.Fody" version="3.1.0" targetFramework="net461" developmentDependency="true" />
-  <package id="codecracker.CSharp" version="1.0.0" targetFramework="net461" />
+  <package id="codecracker.CSharp" version="1.0.1" targetFramework="net461" developmentDependency="true" />
   <package id="Fody" version="1.29.4" targetFramework="net461" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
-  <package id="NLog" version="4.3.5" targetFramework="net461" />
+  <package id="NLog" version="4.3.8" targetFramework="net461" />
 </packages>
