--- a/src/SpotifyMuter.Logic/packages.config
+++ b/src/SpotifyMuter.Logic/packages.config
@@ -3,7 +3,7 @@
   <package id="Anotar.NLog.Fody" version="3.1.0" targetFramework="net461" developmentDependency="true" />
   <package id="AudioSwitcher.AudioApi" version="3.0.0" targetFramework="net461" />
   <package id="AudioSwitcher.AudioApi.CoreAudio" version="3.0.0.1" targetFramework="net461" />
-  <package id="codecracker.CSharp" version="1.0.0" targetFramework="net461" />
+  <package id="codecracker.CSharp" version="1.0.1" targetFramework="net461" developmentDependency="true" />
   <package id="Fody" version="1.29.4" targetFramework="net461" developmentDependency="true" />
-  <package id="NLog" version="4.3.5" targetFramework="net461" />
+  <package id="NLog" version="4.3.8" targetFramework="net461" />
 </packages>
