--- a/src/Tests/Tests.SpotifyWebHelper/packages.config
+++ b/src/Tests/Tests.SpotifyWebHelper/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="3.3.3" targetFramework="net461" />
-  <package id="codecracker.CSharp" version="1.0.0" targetFramework="net461" />
-  <package id="Moq" version="4.5.10" targetFramework="net461" />
+  <package id="codecracker.CSharp" version="1.0.1" targetFramework="net461" developmentDependency="true" />
+  <package id="Moq" version="4.5.21" targetFramework="net461" />
 </packages>
