--- a/src/View/packages.config
+++ b/src/View/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="codecracker.CSharp" version="1.0.0" targetFramework="net461" />
+  <package id="codecracker.CSharp" version="1.0.1" targetFramework="net461" developmentDependency="true" />
 </packages>
