--- a/src/SpotifyMuter/packages.config
+++ b/src/SpotifyMuter/packages.config
@@ -3,5 +3,7 @@
   <package id="Anotar.NLog.Fody" version="3.1.0" targetFramework="net461" developmentDependency="true" />
   <package id="codecracker.CSharp" version="1.0.1" targetFramework="net461" developmentDependency="true" />
   <package id="Fody" version="1.29.4" targetFramework="net461" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="NLog" version="4.3.9" targetFramework="net461" />
+  <package id="SpotifyAPI-NET" version="2.12.0" targetFramework="net461" />
 </packages>
