--- a/EZBlocker/EZBlocker/App.config
+++ b/EZBlocker/EZBlocker/App.config
@@ -22,6 +22,9 @@
             <setting name="UserEducated" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ConfirmOnExit" serializeAs="String">
+                <value>True</value>
+            </setting>
         </EZBlocker.Properties.Settings>
     </userSettings>
 </configuration>
