Revert "Add proxy bypass for local Spotify control"
This reverts commit 5bfec31a43e4091b61b5f6a0872ea2eb085b9a1e.

--- a/EZBlocker/EZBlocker/EZBlocker.csproj
+++ b/EZBlocker/EZBlocker/EZBlocker.csproj
@@ -66,7 +66,6 @@
       <HintPath>Resources\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -80,9 +79,7 @@
     <Compile Include="Json\CSRF.cs" />
     <Compile Include="Json\OAuth.cs" />
     <Compile Include="Settings.cs" />
-    <Compile Include="WebHelperHook.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="WebHelperHook.cs" />
     <Compile Include="WebHelperResult.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
