Add proxy bypass for local Spotify control
Adds an option to allow spotilocal requests to bypass any proxy.

--- a/EZBlocker/EZBlocker/App.config
+++ b/EZBlocker/EZBlocker/App.config
@@ -22,6 +22,9 @@
             <setting name="UserEducated" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="BypassProxyForLocalControl" serializeAs="String">
+                <value>False</value>
+            </setting>
         </EZBlocker.Properties.Settings>
     </userSettings>
 </configuration>
