--- a/EZBlocker/EZBlocker/Properties/Settings.settings
+++ b/EZBlocker/EZBlocker/Properties/Settings.settings
@@ -5,13 +5,10 @@
     <Setting Name="UID" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="UpdateSettings" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
-    </Setting>
     <Setting Name="SpotifyMute" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="UserEducated" Type="System.Boolean" Scope="User">
+    <Setting Name="SkipAds" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
