--- a/EZBlocker/EZBlocker/EZBlocker.csproj
+++ b/EZBlocker/EZBlocker/EZBlocker.csproj
@@ -54,7 +54,8 @@
     <ApplicationIcon>my_music.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>EZBlocker.Program</StartupObject>
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CoreAudio, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -65,6 +66,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Resources\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -74,8 +77,16 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArtistManagerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ArtistManagerForm.Designer.cs">
+      <DependentUpon>ArtistManagerForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ArtistSettingManager.cs" />
     <Compile Include="Json\CSRF.cs" />
     <Compile Include="Json\OAuth.cs" />
     <Compile Include="Settings.cs" />
@@ -91,6 +102,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Json\SpotifyAnswer.cs" />
     <Compile Include="WindowUtilities.cs" />
+    <EmbeddedResource Include="ArtistManagerForm.resx">
+      <DependentUpon>ArtistManagerForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
