--- a/EZBlocker/EZBlocker/Properties/Settings.settings
+++ b/EZBlocker/EZBlocker/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="UserEducated" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="BlockedArtists" Type="System.Collections.Generic.List&lt;System.String&gt;" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
