Fixed a bug with how Spotify kept getting opened even when ExitOnClose was disabled. Added a "disable all notifications" checkbox, because damn they are annoying.

--- a/EZBlocker/EZBlocker/App.config
+++ b/EZBlocker/EZBlocker/App.config
@@ -25,6 +25,9 @@
             <setting name="ExitOnClose" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="DisableNotifs" serializeAs="String">
+                <value>False</value>
+            </setting>
         </EZBlocker.Properties.Settings>
     </userSettings>
 </configuration>
