Async update check, new IsPlaying logic, add option to start Spotify at launch

--- a/EZBlocker/EZBlocker/App.config
+++ b/EZBlocker/EZBlocker/App.config
@@ -11,13 +11,16 @@
     <userSettings>
         <EZBlocker.Properties.Settings>
             <setting name="CID" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="UpdateSettings" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="UserEducated" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="StartSpotify" serializeAs="String">
+                <value>True</value>
             </setting>
         </EZBlocker.Properties.Settings>
     </userSettings>
