--- a/EZBlocker/EZBlocker/Properties/Settings.settings
+++ b/EZBlocker/EZBlocker/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="SpotifyPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="UserEducated2" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
