--- a/EZBlocker/EZBlocker/App.config
+++ b/EZBlocker/EZBlocker/App.config
@@ -28,6 +28,9 @@
       <setting name="SpotifyPath" serializeAs="String">
         <value />
       </setting>
+      <setting name="UserEducated2" serializeAs="String">
+        <value>False</value>
+      </setting>
     </EZBlocker.Properties.Settings>
   </userSettings>
   <appSettings>
